# studies_api

./: .env.example  .gitignore  :memory  README.md  mkdocs.yml  pyproject.toml  requirements_docs.txt  run.sh
docs/: api-endpoints.md  configuration.md  contributing.md  data-modeling.md  deploy.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  release-notes.md  security.md  structure.md  testing.md
frontend/: README.md  app.js  index.html  style.css
migrations/: env.py
migrations/versions/: 0cec48c74531_create_initial_schema.py
studies_api/: app.py
studies_api/core/: database.py  security.py  settings.py
studies_api/models/: __init__.py  sessions.py  users.py
studies_api/routers/: auth.py  stats.py  study_sessions.py  users.py
studies_api/schemas/: auth.py  stats.py  study_sessions.py  users.py
tests/: conftest.py  test_auth.py  test_db.py  test_stats.py  test_study_sessions.py  test_users.py
